# geanypy

./: .buildinfo  .gitignore  Makefile.am  README.markdown  README.win32  api.html  app.html  autogen.sh  build  configure.ac  dialogs.html  document.html  geany.html  geanypy.nsi  genindex.html  index.html  install.html  intro.html  makefile.win32  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  starting.html  win32env.mk
_modules/: index.html
_sources/: api.txt  app.txt  dialogs.txt  document.txt  index.txt
docs/: Makefile
docs/source/: api.rst  app.rst  conf.py  dialogs.rst  document.rst  editor.rst  geany.rst  index.rst  keybindings.rst  license.rst  quickstart.rst
geany/: Makefile.am  __init__.py  app.py  console.py  dialogs.py  document.py  editor.py  editorprefs.py  encodings.py  fileprefs.py  filetype.py  filetypes.py  highlighting.py  indentprefs.py  loader.py  main.py  mainwidgets.py  manager.py  msgwindow.py  navqueue.py  plugin.py  prefs.py  project.py  scintilla.py  signalmanager.py
geany/extensions/: Makefile  Makefile.am  __init__.py  app.c  dialogs.c  document.c  editor.c  encodings.c  fileprefs.c  filetype.c  highlighting.c  main.c  mainwidgets.c  modules-common.h  msgwindow.c  navqueue.c  project.c  scintilla.c
geanypy/: Makefile.am  __init__.py  doc.py
m4/: ax_python_library.m4  gtk.m4
modules/: Makefile  Makefile.am  app.c  dialogs.c  document.c  editor.c  filetype.c  indentprefs.c  project.c  scintilla.c
plugins/: Makefile.am  console.py  demo.py  hello.py  previewer.md  previewer.py  tests.py
scripts/: pylib.py
src/: Makefile.am  app.c  app.h  bindings.c  common.h  dialogs.c  dialogs.h  document.c  document.h  editor.c  editor.h  editorprefs.c  encoding.c  encodings.c  fileprefs.c  filetype.c  filetypes.c  geanypy-bindings.c  geanypy-document.c  geanypy-editor.c  geanypy-encoding.c  geanypy-glog.c  geanypy-keybindings.c  geanypy-keybindings.h  geanypy-plugin.c  geanypy-pluginbase.c  geanypy-pluginbase.h  geanypy-scintilla.c  geanypy-signalmanager.c  geanypy-uiutils.c  geanypy.h  highlighting.c  indentprefs.c  indentprefs.h  main.c  mainwidgets.c  makefile.win32  msgwindow.c  navqueue.c  plugin.c  (+14 more)
tests/: test_app.py  test_project.py
